--- a/index.html
+++ b/index.html
@@ -245,6 +245,13 @@
 	</head>
 	<body>
 		<div class="top">
+			<div id="music-player">
+				<!-- 音频控件 -->
+				<audio id="audio" controls>
+				<source src="./pagebgm/デート.mp3" type="audio/mpeg">
+				您的浏览器不支持音频元素。
+				</audio>
+				</div>
 			<div class="top-left">
 				<h1>止于此</h1>
 				<span>风止于秋水，我止于你💗</span>
